--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,8 @@
         <title>{% block title %}Vault{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -12,6 +14,36 @@
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{ path('home') }}">Vault</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="{{ path('home') }}">Home</a>
+                        {# <a class="nav-link" href="{{ path('upload') }}">Upload</a> #}
+                        {# <a class="nav-link" href="{{ path('download') }}">Download</a> #}
+                    </div>
+                    <div class="navbar-nav">
+                        {% if app.user and app.user.isAuthenticated() %}
+                            <a class="nav-link" href="{{ path('app_logout') }}">Logout ({{ app.user.username }})</a>
+                        {% else %}
+                            <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                            <a class="nav-link" href="{{ path('app_register') }}">Register</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container my-4">
+            {% if app.user and app.user.isAuthenticated() %}
+                <img src="{{ asset('images/vault-door-open.png') }}" alt="" class="background-image">
+            {% else %}
+                <img src="{{ asset('images/vault-door-closed.png') }}" alt="" class="background-image">
+            {% endif %}
+        </div>
         {% block body %}{% endblock %}
     </body>
 </html>
