--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -25,14 +25,36 @@ body {
     padding: 8px;
     color: var(--color-white);
     background-color: var(--color-charcoal);
+    border: 1px solid var(--color-chamoisee);
     border-radius: 8px;
     width: 80%;
 }
 
 .form-container {
+    color: var(--color-white);
     background-color: var(--color-charcoal);
     border: 1px solid var(--color-chamoisee);
     border-radius: 8px;
     padding: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#form-file-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 16px;
+}
+
+.form-file {
+    width: 100%;
+    max-width: 400px;
+    min-width: 300px;
+}
+
+h2 {
+    text-align: center;
+    margin: 0 auto;
+    padding: 8px;
+    color: var(--color-white);
 }
