--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,49 @@
 
 {% block body %}
 {% if app.user %}
-    <h1 class="home-msg">Welcome to your Vault</h1>
+  <h1 class="home-msg">Welcome to your Vault</h1>
+  <div class="container d-flex justify-content-around mt-5" id="form-file-container">
+    <div class="form-container form-file">
+      <h2>Upload a File</h2>
+      {{ form_errors(uploadForm) }}
+      {{ form_start(uploadForm) }}
+        {{ form_row(uploadForm.file) }}
+        {{ form_row(uploadForm.category) }}
+        {{ form_row(uploadForm.secretKey, {
+          label: 'Secret Key'
+        }) }}
+        <button type="submit" class="btn btn-success" id="upload-button">Upload</button>
+      {{ form_end(uploadForm) }}
+  </div>
+  <div class="form-container form-file">
+    <h2>Download a File</h2>
+    {% if files != null %}
+      <h3 class="mb-3">Available Files:</h3>
+      {% for file in files %}
+        <div class="mb-2">
+          <input
+            class="form-check-input"
+            type="radio" name="selected-file"
+            id="{{ file.id }}"
+            value="{{ file.id }}">
+          </input>
+          <label class="form-check-label" for="{{ file.id }}">{{ file.filename }}</label>
+        </div>
+      {% endfor %}
+    {% endif %}
+    {{ form_errors(downloadForm) }}
+    {{ form_start(downloadForm) }}
+      {{ form_row(downloadForm.category) }}
+      {{ form_row(downloadForm.secretKey, {
+        label: 'Secret Key'
+      }) }}
+      <div class="d-flex gap-2">
+        <button type="submit" class="btn btn-primary">Filter</button>
+        <button class="btn btn-success" id="download-button">Download</button>
+      </div>
+    {{ form_end(downloadForm) }}
+    </div>
+  </div>
 {% else %}
     <h1 class="home-msg">Please log in or register to access your secure storage.</h1>
 {% endif %}
