--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,18 +3,22 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <div class="container form-container">
-        <h1>Register</h1>
+    <div class="container">
+      <div class="row justify-content-center">
+				<div class="form-container col-12 col-md-4">
+					<h1>Register</h1>
 
-        {{ form_errors(registrationForm) }}
+					{{ form_errors(registrationForm) }}
 
-        {{ form_start(registrationForm) }}
-            {{ form_row(registrationForm.username) }}
-            {{ form_row(registrationForm.email) }}
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
-            }) }}
-            <button type="submit" class="btn btn-primary">Register</button>
-        {{ form_end(registrationForm) }}
-    </div>
+					{{ form_start(registrationForm) }}
+							{{ form_row(registrationForm.username) }}
+							{{ form_row(registrationForm.email) }}
+							{{ form_row(registrationForm.plainPassword, {
+									label: 'Password'
+							}) }}
+							<button type="submit" class="btn btn-primary">Register</button>
+					{{ form_end(registrationForm) }}
+				</div>
+			</div>
+		</div>
 {% endblock %}
