--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </nav>
+        <div id="flash-messages" class="p-3"></div>
         <div class="container my-4">
             {% if app.user %}
                 <img src="{{ asset('images/vault-door-open.png') }}" alt="" class="background-image">
